tests/baselines/reference/parserNotHexLiteral1.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parserNotHexLiteral1.ts(2,1): error TS2304: Cannot find name 'console'.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parserNotHexLiteral1.ts(5,1): error TS2304: Cannot find name 'console'.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parserNotHexLiteral1.ts (2 errors) ====
    var x = {e0: 'cat', x0: 'dog'};
    console.info (x.x0);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    // tsc dies on this next line with "bug.ts (5,16): Expected ')'"
    //   tsc seems to be parsing the e0 as a hex constant.
    console.info (x.e0);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    